static/css/base.css
html {
  height: 100%;
}

body {
  background: url("https://cdncozycig.addons.business/10626/cig-cozy-gallery-3907jOq-20180408_Bon_Jovi_Newark_1299-xxl.jpeg?c=13")
    no-repeat center center fixed;
  background-size: cover;
  padding-top: 20%;
  height: calc(100vh - 164px);
  color: black;
  font-family: "Montserrat";
}

.fixed-top-desktop-only {
  background-color: #0e0906;
}

/* from Bulma */
.icon {
  align-items: center;
  display: inline-flex;
  justify-content: center;
  height: 1.1rem;
  width: 1.1rem;
  color: #fbf7ee;
}

i.fas.fa-chevron-left,
i.fas.fa-plus,
i.fas.fa-minus {
  color: black;
}

i.fas.fa-chevron-left:hover {
  color: #fbf7ee;
}

/* Search form */
.search-form {
  background-color: transparent;
  color: #fbf7ee;
}

input.form-control.border.border-black.rounded-0.search-form[type="text"] {
  width: 100px;
  -webkit-transition: width 0.4s ease-in-out;
  transition: width 0.4s ease-in-out;
}

/* When the input field gets focus, change its width to 100% */
input.form-control.border.border-black.rounded-0.search-form[type="text"]:focus {
  width: 100%;
}

.row.main-navbar {
  margin-top: 20px;
}

/* logo */
.nav-logo {
  text-align: center;
}

.logo-img {
  width: 46%;
}

/* dropdwon menu*/
.dropdown-menu {
  color: #212529;
  background-color: none;
  background-clip: none;
  border: none;
  border-radius: 0.3rem;
}

/* bootstrap toasts */
.message-container {
  position: fixed;
  top: 72px;
  right: 15px;
  z-index: 99999999999;
}

.custom-toast {
  overflow: visible;
}

.toast-capper {
  height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 10px solid black;
  position: absolute;
  top: -10px;
  right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
  border-bottom-color: #007bff !important;
}

.arrow-secondary {
  border-bottom-color: #6c757d !important;
}

.arrow-success {
  border-bottom-color: #28a745 !important;
}

.arrow-danger {
  border-bottom-color: #dc3545 !important;
}

.arrow-warning {
  border-bottom-color: #ffc107 !important;
}

.arrow-info {
  border-bottom-color: #17a2b8 !important;
}

.arrow-light {
  border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
  border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
  height: 100px;
  overflow-x: hidden;
  overflow-y: auto;
}

/* caroussel */
.carousel-caption.top-caption {
  margin-bottom: 550px;
}

.carousel-caption.left-caption {
  margin-bottom: 500px;
  margin-right: 400px;
}

/* tours section */
p.cancelledtour {
    font-size: 50px;
    text-transform: uppercase;
    text-align: center;
}

/* cards articles */
.card.card-bj2020 {
  margin-top: 30px;
  border: none;
  width: 50%;
  margin-bottom: 20px;
}

.card.mb-3 {
  border: none;
  margin-top: 10px;
}

.card.cards-article {
  border: none;
}

.card.h-100.border-0 {
  background-color: white;
}

a.music-link.btn-white.btn-lg.rounded-0.text-uppercase {
  background-color: #a82a28;
  text-decoration: none;
  margin-left: 30%;
}

/* delivery banner */
div#delivery-banner {
  margin-bottom: 20px;
}

.bg-white {
  background-color: #e3dcca;
}

/* Table bag content */
.table-header {
  text-align: center;
}

h2.mb-4.shoppingbag-text {
  color: #e63b3b;
  margin-top: 20px;
}

.table-responsive.rounded {
  background-color: #fafafa;
}

/* Buttons */
.sort-btn {
  margin-left: 50px;
  background-color: transparent;
  margin-bottom: 15px;
}

.findout-button {
  background: #fbf7ee;
  color: black;
  min-width: 260px;
  text-decoration: none;
}

.btn-white {
  color: black;
  text-decoration: none;
}

.btn-white:hover{
    text-decoration: none;
}

.out-now-button:hover,
.out-now-button:active,
.out-now-button:focus,
.btn-white:hover,
.btn-white:active,
.btn-white:focus {
  background: #222;
  color: #fbf7ee;
}

/* overlays */
.overlay {
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  position: fixed;
  z-index: -1;
  background-color: white;
}

/* arrows scroll-up */
.arrow-up-button {
  height: 42px;
  width: 42px;
  position: fixed;
  bottom: 10px;
  right: 10px;
}

i.fas.fa-arrow-up.mx-auto.my-auto {
    color: #9f9b9d;
}

.arrow-up-link {
  cursor: pointer;
}

.pdt-detail-row {
  background-color: white;
}
/* update/delete cursor in shopping bag */
.btt-link,
.update-link,
.remove-item {
  cursor: pointer;
}

/* The flip card container */
.flip-card-row {
  margin-bottom: 20px;
}

.flip-card {
  background-color: white;
  width: 500px;
  height: 500px;
  border: none;
  perspective: 1000px;
}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: left;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

h1.album-title {
  text-align: center;
}

h4.track-list {
  margin-left: 5px;
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front,
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
}

.flip-card-back {
  background-color: white;
  color: black;
  transform: rotateY(180deg);
}

/*--------------------------------- Footer*/
footer.page-footer.pt-4 {
    background-color: black;
}

a.btn-floating{
    font-size: 30px;
    color: white;
}
/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
  .fixed-top-desktop-only {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1030;
  }

  .header-container {
    padding-top: 164px;
  }
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
  .header-container {
    padding-top: 116px;
  }

  body {
    height: calc(100vh - 116px);
    padding-top: 0;
  }

  .nav-logo {
    display: none;
  }
}

/* Allauth form formatting */

.allauth-form-inner-content p {
  margin-top: 1.5rem; /* mt-4 */
  color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
  border-color: #000;
  border-radius: 0;
}

.allauth-form-inner-content label:not([for="id_remember"]) {
  display: none;
}

.allauth-form-inner-content input::placeholder {
  color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type="submit"] {
  /* btn */
  display: inline-block;
  font-weight: 400;
  color: #fff;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #000;
  border: 1px solid #000;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0;

  /* standard bootstrap btn transitions */
  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type="submit"]:hover {
  color: #fff;
  background-color: #222;
  border-color: #222;
}

.allauth-form-inner-content a {
  color: #17a2b8; /* text-info */
}

